--- a/home.html
+++ b/home.html
@@ -95,8 +95,8 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg">
-          <a  href=" ">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    <img src="assets/images/gif_total.gif" style="width: 150px;" alt="" />
+          <a  href="https://totalenergies.com.br/pt-br ">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    <img src="assets/images/gif_total.gif" style="width: 155px;" alt="" />
            &nbsp;&nbsp;<span style="color: #FF0000; font-family: Nunito; font-size: 28px;">
          <b>  TotalEnergies Brasil </b>
             </span>
@@ -108,14 +108,14 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto mr-2">
               <li class="nav-item active">
-                <a class="nav-link" href="#demo-modal_anmas"  style="font-family: Nunito;"> <img src="https://tenor.com/view/red-card-gif-13197079" style="width: 10px;" alt="" />STOP CARD <span class="sr-only">(current)</span></a>
+               <!-- <a class="nav-link" href="#demo-modal_anmas"  style="font-family: Nunito;"> <img src="https://tenor.com/view/red-card-gif-13197079" style="width: 10px;" alt="" />STOP CARD <span class="sr-only">(current)</span></a>-->
               </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <li class="nav-item active">
                 <a class="nav-link" href="#demo-modal_anmas"  style="font-family: Nunito;">Links Úteis <span class="sr-only">(current)</span></a>
               </li>
              
               <li class="nav-item">
-                <a class="nav-link" href="https://totalenergies.com.br/pt-br">About </a>
+                <a class="nav-link" href="https://totalenergies.com.br/pt-br">Conheça o OnePlace </a>
               </li>
              
               <li class="nav-item">
@@ -156,13 +156,13 @@
             <a class="nav-link pl-1" href="#demo-modal_anmas">Links Úteis <span class="sr-only">(current)</span></a>
           </li> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li class="nav-item">
-            <a class="nav-link" href="https://totalenergies.com.br/pt-br">About </a>
+            <a class="nav-link" href="https://totalenergies.com.br/pt-br">Conheça o OnePlace</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://forms.office.com/r/XE5j2gMH5N" target="_blank"  style="font-family: Nunito;">Fale Conosco</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="https://forms.office.com/e/1JdpUJfHF0"  style="font-family: Nunito;"><img src="./assets/images/red-card.gif" style="width: 38px;" alt=""/>STOP CAR <span class="sr-only">(current)</span></a>
+           <!-- <a class="nav-link" href="https://forms.office.com/e/1JdpUJfHF0"  style="font-family: Nunito;"><img src="./assets/images/red-card.gif" style="width: 36px;" alt=""/>STOP CARD <span class="sr-only">(current)</span></a> -->
           </li>
         </ul>
         <div class="user_option">
