--- a/mobile/home_mobile.html
+++ b/mobile/home_mobile.html
@@ -296,10 +296,10 @@
   </footer>
   <!-- footer section -->
 
-  <script src="./assets1/js/jquery-3.4.1.min.js"></script>
-  <script src="./assets1/js/bootstrap.js"></script>
-  <script src="./assets1/js/circles.min.js"></script>
-  <script src="./assets1/js/custom.js"></script>
+  <script src="../assets1/js/jquery-3.4.1.min.js"></script>
+  <script src="../assets1/js/bootstrap.js"></script>
+  <script src="../assets1/js/circles.min.js"></script>
+  <script src="../assets1/js/custom.js"></script>
 
 
 
@@ -309,7 +309,7 @@
       <table> 
 <tr>
 <td align="center" >
-<a href=""><img src="./assets/images/one_place.png" alt="Imagem" style="width: 40%;"/></a>
+<a href=""><img src="../assets/images/one_place.png" alt="Imagem" style="width: 40%;"/></a>
   <br><br>
  
 <h6  style="font-family: Nunito;">Principais links para que você tenha apoio na <br>realização das atividades do seu dia a dia.</h6>
