--- a/mobile/login_mobile.html
+++ b/mobile/login_mobile.html
@@ -10,9 +10,9 @@
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	
-	<link rel="stylesheet" href="./assets3/css/style.css">
-	<link rel="stylesheet" href="./assets3/css/validacao.css">
-	<link rel="stylesheet" href="./assets3/global.css">
+	<link rel="stylesheet" href="../assets3/css/style.css">
+	<link rel="stylesheet" href="../assets3/css/validacao.css">
+	<link rel="stylesheet" href="../assets3/global.css">
 
 
 	</head>
@@ -27,7 +27,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-7 col-lg-5">
 					<div class="wrap">
-						<div class="img" style="background-image: url(./assets/images/bg-1.png);"></div>
+						<div class="img" style="background-image: url(../assets/images/bg-1.png);"></div>
 						<div class="login-wrap p-4 p-md-5">
 			      	<div class="d-flex">
 			      		<div class="w-100">
@@ -89,13 +89,13 @@
 
 </body>
 
-	<script src="./assets3/js/jquery.min.js"></script>
-	<script src="./assets3/js/validacao.js"></script>
-  <script src="./assets3/js/popper.js"></script>
-  <script src="./assets3/js/bootstrap.min.js"></script>
-  <script src="./assets3/js/main.js"></script>
-  <script src="./assets3/js/loading.js"></script>
-  <script src="./assets3/js/validations.js"></script>
+	<script src="../assets3/js/jquery.min.js"></script>
+	<script src="../assets3/js/validacao.js"></script>
+  <script src="../assets3/js/popper.js"></script>
+  <script src="../assets3/js/bootstrap.min.js"></script>
+  <script src="../assets3/js/main.js"></script>
+  <script src="../assets3/js/loading.js"></script>
+  <script src="../assets3/js/validations.js"></script>
 
   <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
@@ -116,7 +116,7 @@
 firebase.auth().onAuthStateChanged(function(user){
     if (user) {
 
-        window.location.href = "home_hsqe.html";
+        window.location.href = "home_hsqe_mobile.html";
 
     }});
 
