--- a/mobile/home_mobile.html
+++ b/mobile/home_mobile.html
@@ -184,7 +184,7 @@
       </div>
       <br>
       <div class="row">
-        <div class="col-md-3_ col-sm-6"><a href="login.html">
+        <div class="col-md-3_ col-sm-6"><a href="login_mobile.html">
           <div class="content-box bg-green">
             <div class="img-box">
               <img src="../assets/images/hsqe_icon.png" alt="" /> 
