--- a/home_hsqe.html
+++ b/home_hsqe.html
@@ -1502,49 +1502,49 @@ function showDivs1(n) {
 <div class="w3-content w3-display-container">  
 
 <div class="w3-display-container mySlides3"  style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/BDG EN/BDG EN/BDG EN PG1.jpg" style="width:70%">
   <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides3" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
+  <img src="./assets/images/folder_security/BDG EN/BDG EN/BDG EN PG2.jpg" style="width:70%" >
   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides3" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
+  <img src="./assets/images/folder_security/BDG EN/BDG EN/BDG EN PG3 .jpg" style="width:70%">
   <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides3" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/BDG EN/BDG EN/BDG EN PG4.jpg" style="width:70%">
   <div class="w3-display-topright w3-large w3-container w3-padding-16 w3-black">
   
   </div>
 </div>
 
 <div class="w3-display-container mySlides3" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/BDG EN/BDG EN/BDG EN PG5.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides3" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/BDG EN/BDG EN/BGD EN PG6.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides3" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/BDG EN/BDG EN/BDG EN PG7.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
@@ -1590,49 +1590,49 @@ function showDivs2(n) {
 <div class="w3-content w3-display-container">  
 
 <div class="w3-display-container mySlides4"  style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/BDG PT/BDG PT/BDG PT PG1.jpg" style="width:70%">
   <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides4" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
+  <img src="./assets/images/folder_security/BDG PT/BDG PT/BDG PT PG2.jpg" style="width:70%" >
   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides4" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
+  <img src="./assets/images/folder_security/BDG PT/BDG PT/BDG PT PG3.jpg" style="width:70%">
   <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides4" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/BDG PT/BDG PT/BDG PT PG4.jpg" style="width:70%">
   <div class="w3-display-topright w3-large w3-container w3-padding-16 w3-black">
   
   </div>
 </div>
 
 <div class="w3-display-container mySlides4" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/BDG PT/BDG PT/BDG PT PG5.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides4" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/BDG PT/BDG PT/BDG PT PG6.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides4" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/BDG PT/BDG PT/BDG PT PG7.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
@@ -1678,49 +1678,49 @@ function showDivs2(n) {
 <div class="w3-content w3-display-container">  
 
 <div class="w3-display-container mySlides5"  style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/ARX EN/ARX EN/ARX EN PG1.jpg" style="width:70%">
   <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides5" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
+  <img src="./assets/images/folder_security/ARX EN/ARX EN/ARX EN PG2.jpg" style="width:70%" >
   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides5" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
+  <img src="./assets/images/folder_security/ARX EN/ARX EN/ARX EN PG3.jpg" style="width:70%">
   <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides5" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/ARX EN/ARX EN/ARX EN PG4.jpg" style="width:70%">
   <div class="w3-display-topright w3-large w3-container w3-padding-16 w3-black">
   
   </div>
 </div>
 
 <div class="w3-display-container mySlides5" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/ARX EN/ARX EN/ARX EN PG5.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides5" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/ARX EN/ARX EN/ARX EN PG6.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides5" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/ARX EN/ARX EN/ARX EN PG7.jpg.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
@@ -1766,49 +1766,49 @@ function showDivs3(n) {
 <div class="w3-content w3-display-container">  
 
 <div class="w3-display-container mySlides6"  style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/ARX PT/ARX PT/ARX PT PG1.jpg" style="width:70%">
   <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides6" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
+  <img src="./assets/images/folder_security/ARX PT/ARX PT/ARX PT PG2.jpg" style="width:70%" >
   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides6" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
+  <img src="./assets/images/folder_security/ARX PT/ARX PT/ARX PT PG3.jpg" style="width:70%">
   <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides6" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/ARX PT/ARX PT/ARX PT PG4.jpg" style="width:70%">
   <div class="w3-display-topright w3-large w3-container w3-padding-16 w3-black">
   
   </div>
 </div>
 
 <div class="w3-display-container mySlides6" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/ARX PT/ARX PT/ARX PT PG5.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides6" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/ARX PT/ARX PT/ARX PT PG6.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides6" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/ARX PT/ARX PT/ARX PT PG7.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
@@ -1854,49 +1854,49 @@ function showDivs4(n) {
 <div class="w3-content w3-display-container">  
 
 <div class="w3-display-container mySlides7"  style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/UBL EN/UBL EN PG1.jpg" style="width:70%">
   <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides7" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
+  <img src="./assets/images/folder_security/UBL EN/UBL EN PG2.jpg" style="width:70%" >
   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides7" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
+  <img src="./assets/images/folder_security/UBL EN/UBL EN PG3 .jpg" style="width:70%">
   <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides7" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/UBL EN/UBL EN PG4.jpg" style="width:70%">
   <div class="w3-display-topright w3-large w3-container w3-padding-16 w3-black">
   
   </div>
 </div>
 
 <div class="w3-display-container mySlides7" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/UBL EN/UBL EN PG5.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides7" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/UBL EN/UBL EN PG6.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides7" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/UBL EN/UBL EN PG7.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
@@ -1942,49 +1942,49 @@ function showDivs5(n) {
 <div class="w3-content w3-display-container">  
 
 <div class="w3-display-container mySlides8"  style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/UBL PT/UBL PT PG1.jpg" style="width:70%">
   <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides8" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
+  <img src="./assets/images/folder_security/UBL PT/UBL PT PG2.jpg" style="width:70%" >
   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides8" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
+  <img src="./assets/images/folder_security/UBL PT/UBL PT PG3 .jpg" style="width:70%">
   <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides8" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/UBL PT/UBL PT PG4.jpg" style="width:70%">
   <div class="w3-display-topright w3-large w3-container w3-padding-16 w3-black">
   
   </div>
 </div>
 
 <div class="w3-display-container mySlides8" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/UBL PT/UBL PT PG5.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides8" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/UBL PT/UBL PT PG6.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides8" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
+  <img src="./assets/images/folder_security/UBL PT/UBL PT PG7.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
