--- a/mobile/home_hsqe_mobile.html
+++ b/mobile/home_hsqe_mobile.html
@@ -86,10 +86,10 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg-pt">
           <a class="navbar-brand" href=" ">
-          <img src="../assets/images/hsqe_icon.png" style="width: 85px;" alt="" />
+          <img src="../assets/images/hsqe_icon.png" style="width: 60px;" alt="" />
        
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <h2 style="color: #064aaf; font-family: Nunito; font-size: 20px;"><b>SEJA BEM VINDO <br>AS FERRAMENTAS HSEQ</b></h2>
+            <h2 style="color: #064aaf; font-family: Nunito; font-size: 18px;"><b>SEJA BEM VINDO <br>AS FERRAMENTAS HSEQ</b></h2>
           </button>
         </a> 
         </nav>
@@ -215,10 +215,10 @@
   <!-- do section -->
   
   <div class=".custom_menu-sub_container" style="text-align: center; height: 30px;">
-    <h6 class="tres_home" style="font-size:18px;" >Segurança para Mim, para Você e para Todos</h6> 
+    <h6 class="tres_home" style="font-size:17px;" >Segurança para Mim, para Você e para Todos</h6> 
   
   </div>
-  <br> <br>
+  
   <div class="about-us">
     <div class="container">
         <div class="row">
@@ -702,12 +702,12 @@ firebase.auth().onAuthStateChanged(function(user){
 <tr>
   <td>
  <div class="footer">
-  <a href="historico_mobile.html" class="footer1-btn1-close1-mobile" style="font-size: 10px;"> Historico Relatos </a> &ensp;&ensp;
+  <a href="./historico_mobile.html" class="footer1-btn1-close1-mobile" style="font-size: 10px;"> Historico Relatos </a> &ensp;&ensp;
 </div>
 </td>
 <td>
     <div class="footer">
-              <a href="anmas_mobile.html" class="footer1-btn1-close3-mobile" style="font-size: 12px;">&ensp; Novo Relato &ensp;</a>
+              <a href="./anmas_mobile.html" class="footer1-btn1-close3-mobile" style="font-size: 12px;">&ensp; Novo Relato &ensp;</a>
     </div>
   </td>
   </tr>
@@ -1209,7 +1209,7 @@ img_m {
   
 <br>
   
-&bull; Click aqui para acessar o <b style="color: brown;">APP:</b><img src="./assets/images/pob_.png" alt="Imagem" class="regras4"/>
+&bull; Click aqui para acessar o <b style="color: brown;">APP:</b><img src="../assets/images/pob_.png" alt="Imagem" class="regras4"/>
 
 
   
@@ -1445,14 +1445,14 @@ img_m {
 </div>
 
 <div class="w3-display-container mySlides1" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND PT/PND PT PG6.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND PT/PND PT PG6.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides1" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND PT/PND PT PG7.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND PT/PND PT PG7.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
@@ -1498,49 +1498,49 @@ function showDivs1(n) {
 <div class="w3-content w3-display-container">  
 
 <div class="w3-display-container mySlides3"  style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
   <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides3" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
+  <img src="../assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides3" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
   <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides3" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
   <div class="w3-display-topright w3-large w3-container w3-padding-16 w3-black">
   
   </div>
 </div>
 
 <div class="w3-display-container mySlides3" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides3" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides3" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
@@ -1586,49 +1586,49 @@ function showDivs2(n) {
 <div class="w3-content w3-display-container">  
 
 <div class="w3-display-container mySlides4"  style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
   <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides4" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
+  <img src="../assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides4" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
   <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides4" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
   <div class="w3-display-topright w3-large w3-container w3-padding-16 w3-black">
   
   </div>
 </div>
 
 <div class="w3-display-container mySlides4" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides4" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides4" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
@@ -1674,49 +1674,49 @@ function showDivs2(n) {
 <div class="w3-content w3-display-container">  
 
 <div class="w3-display-container mySlides5"  style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
   <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides5" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
+  <img src="../assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides5" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
   <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides5" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
   <div class="w3-display-topright w3-large w3-container w3-padding-16 w3-black">
   
   </div>
 </div>
 
 <div class="w3-display-container mySlides5" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides5" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides5" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
@@ -1762,49 +1762,49 @@ function showDivs3(n) {
 <div class="w3-content w3-display-container">  
 
 <div class="w3-display-container mySlides6"  style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
   <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides6" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
+  <img src="../assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides6" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
   <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides6" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
   <div class="w3-display-topright w3-large w3-container w3-padding-16 w3-black">
   
   </div>
 </div>
 
 <div class="w3-display-container mySlides6" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides6" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides6" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
@@ -1850,49 +1850,49 @@ function showDivs4(n) {
 <div class="w3-content w3-display-container">  
 
 <div class="w3-display-container mySlides7"  style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
   <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides7" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
+  <img src="../assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides7" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
   <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides7" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
   <div class="w3-display-topright w3-large w3-container w3-padding-16 w3-black">
   
   </div>
 </div>
 
 <div class="w3-display-container mySlides7" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides7" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides7" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
@@ -1938,49 +1938,49 @@ function showDivs5(n) {
 <div class="w3-content w3-display-container">  
 
 <div class="w3-display-container mySlides8"  style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG1.jpg" style="width:70%">
   <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides8" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
+  <img src="../assets/images/folder_security/PND EN/PND EN PG2.jpg" style="width:70%" >
   <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides8" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG3 .jpg" style="width:70%">
   <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
    
   </div>
 </div>
 
 <div class="w3-display-container mySlides8" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG4.jpg" style="width:70%">
   <div class="w3-display-topright w3-large w3-container w3-padding-16 w3-black">
   
   </div>
 </div>
 
 <div class="w3-display-container mySlides8" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG5.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides8" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG6.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
 </div>
 
 <div class="w3-display-container mySlides8" style="text-align: center;">
-  <img src="./assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
+  <img src="../assets/images/folder_security/PND EN/PND EN PG7.jpg" style="width:70%">
   <div class="w3-display-middle w3-large w3-container w3-padding-16 w3-black">
 
   </div>
