--- a/mobile/anmas_mobile.html
+++ b/mobile/anmas_mobile.html
@@ -1096,7 +1096,7 @@
 
 		firebase.auth().onAuthStateChanged(function (user) {
 			if (!user) {
-				window.location.href = "login.html";
+				window.location.href = "./login_mobile.html";
 			}
 		})
 
