--- a/home_hsqe.html
+++ b/home_hsqe.html
@@ -1132,7 +1132,7 @@ img_m {
           <div class="bar">      
           </div><a href="#demo-modal_araxa_english" >
           <h6 class="title1">English</h6></a><br>
-          <a href="demo-modal_araxa_port" >  <h6 class="title2">Português</h6></a>
+          <a href="#demo-modal_araxa_port" >  <h6 class="title2">Português</h6></a>
         </div></div>
   
   
@@ -1142,7 +1142,7 @@ img_m {
           <div class="bar">      
           </div><a href="#demo-modal_uber_english" >
           <h6 class="title1">English</h6></a><br>
-          <a href="demo-modal_uber_port" >  <h6 class="title2">Portugues</h6></a>
+          <a href="#demo-modal_uber_port" >  <h6 class="title2">Portugues</h6></a>
         </div></div>
   
         </div>
