--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <table align="center">
                                 <tr>
                                     <td width="50%" valign="top" font-size="1px"><br>
-                                                  <a href="https://play.google.com/" target="_blank" class="logo">
+                                                  <a href="https://play.google.com/store/apps/details?id=app.com.oneplacehsebrasil" target="_blank" class="logo">
                                         <img src="assets/images/Screenshot_2.png" alt="APP"
                                             style="width: 9vw;  height: 14vw" /><span class="aa"></span></a><br><br>
                                             
