--- a/mobile/cadastro_mobile.html
+++ b/mobile/cadastro_mobile.html
@@ -10,9 +10,9 @@
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	
-	<link rel="stylesheet" href="./assets3/css/style.css">
-	<link rel="stylesheet" href="./assets3/css/validacao.css">
-	<link rel="stylesheet" href="./assets_reg/register.css">
+	<link rel="stylesheet" href="../assets3/css/style.css">
+	<link rel="stylesheet" href="../assets3/css/validacao.css">
+	<link rel="stylesheet" href="../assets_reg/register.css">
 
 	</head>
 	<body>
@@ -26,7 +26,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-7 col-lg-5">
 					<div class="wrap">
-						<div class="img" style="background-image: url(./assets/images/bg-1.png);"></div>
+						<div class="img" style="background-image: url(../assets/images/bg-1.png);"></div>
 						<div class="login-wrap p-4 p-md-5">
 			      	<div class="d-flex">
 			      		<div class="w-100">
@@ -119,7 +119,7 @@
 
 					<div >
 						
-						<a href="login.html" ><img src="./assets/images/back.png" style="width: 25px; height: 23px;"></a>
+						<a href="login.html" ><img src="../assets/images/back.png" style="width: 25px; height: 23px;"></a>
 
 					
 				</div> 
@@ -135,12 +135,12 @@
 	</section>
 </body>
 
-	<script src="./assets3/js/jquery.min.js"></script>
+	<script src="../assets3/js/jquery.min.js"></script>
 	
-  <script src="./assets3/js/bootstrap.min.js"></script>
-  <script src="./assets3/js/main.js"></script>
-  <script src="./assets_reg/cadastro.js"></script>
-  <script src="./assets3/js/validations.js"></script>
+  <script src="../assets3/js/bootstrap.min.js"></script>
+  <script src="../assets3/js/main.js"></script>
+  <script src="../assets_reg/cadastro.js"></script>
+  <script src="../assets3/js/validations.js"></script>
 <!--  <script src="../../../firebase-init.js"></script> -->
 
 <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
