--- a/mobile/login_mobile.html
+++ b/mobile/login_mobile.html
@@ -59,7 +59,7 @@
 
 					<br>
 					<div class="form-group">
-		            	<button type="button" class="form-control btn btn-primary rounded submit px-3" onclick="register()">CADASTRAR</button>
+		            	<button type="button" class="form-control btn btn-primary rounded submit px-3" onclick="register_()">CADASTRO</button>
 		            </div>
 
 					
