--- a/home_hsqe.html
+++ b/home_hsqe.html
@@ -116,7 +116,7 @@
           <li class="nav-item">
             <a class="nav-link" href="portfolio.html">  </a>
           </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="nav-link" href="https://s.offce.com/e/1JdpUJfHF0" > </a>
+            <a class="nav-link" href="https://s.office.com/e/1JdpUJfHF0" > </a>
           </li>
           &nbsp;&nbsp;&nbsp;
         </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -151,7 +151,7 @@
     
       <br>
       <div class="row">
-        <div class="col-md-3 col-sm-6"><a href="https://s.ofice.com/e/pm6yVnvib1">
+        <div class="col-md-3 col-sm-6"><a href="https://forms.office.com/e/577AZ1Ddx5">
           <div class="content-box1 bg-s_green">
             <div class="img-box">
               <img src="./assets/images/green.png" alt="" /> 
@@ -163,7 +163,7 @@
             </div>
              </div>
         </div>
-        <div class="col-md-3 col-sm-6"><a href="https://s.ofice.com/e/bDE7AeeaM9">
+        <div class="col-md-3 col-sm-6"><a href="https://forms.office.com/e/DLHsDTVk31">
           <div class="content-box1 bg-s_blue">
             <div class="img-box">
               <img src="./assets/images/safety.png" alt="" />
@@ -565,7 +565,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center" >
-  <a href="https://s.ofice.com/e/rk8a4X9KVa"><img src="./assets/images/hsqe/Espaço Confinado 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
+  <a href="https://forms.office.com/e/4kSPdcezAD"><img src="./assets/images/hsqe/Espaço Confinado 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
 </td>
 </tr>
 </table> 
@@ -582,7 +582,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center" >
-  <a href="https://s.ofice.com/e/9U7fDpjbyh"><img src="./assets/images/hsqe/Op Elevação 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
+  <a href="https://forms.office.com/e/NdN5FVnDm1"><img src="./assets/images/hsqe/Op Elevação 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
 </td>
 </tr>
 </table> 
@@ -599,7 +599,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center" >
-  <a href="https://s.ofice.com/e/PXGFF5Uf6V"><img src="./assets/images/hsqe/Trab a quente 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
+  <a href="https://forms.office.com/e/uND1LUi8cw"><img src="./assets/images/hsqe/Trab a quente 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
 </td>
 </tr>
 </table> 
@@ -616,7 +616,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center" >
-  <a href="https://s.ofice.com/e/MbN291gE71"><img src="./assets/images/hsqe/Trab Altura 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
+  <a href="https://forms.office.com/e/Vcci4K5J9n"><img src="./assets/images/hsqe/Trab Altura 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
 </td>
 </tr>
 </table> 
@@ -633,7 +633,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center" >
-  <a href="https://s.ofice.com/e/5EFjr0p2Fu"><img src="./assets/images/hsqe/Loto 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
+  <a href="https://forms.office.com/e/BxevCuDRyz"><img src="./assets/images/hsqe/Loto 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
 
 </td>
 </tr>
@@ -651,7 +651,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center" >
-  <a href="https://s.ofice.com/e/qxqcDxvyx2"><img src="./assets/images/hsqe/Trab Escavação 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
+  <a href="https://forms.office.com/e/48ViqiSh9u"><img src="./assets/images/hsqe/Trab Escavação 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
 </td>
 </tr>
 </table> 
@@ -668,7 +668,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center" >
-  <a href="https://s.ofice.com/e/PbWCWpZBaY"><img src="./assets/images/hsqe/Sist gas liq sol 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
+  <a href="https://forms.office.com/e/dUC8B0YTMz"><img src="./assets/images/hsqe/Sist gas liq sol 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
 </td>
 </tr>
 </table> 
