--- a/mobile/cadastro_mobile.html
+++ b/mobile/cadastro_mobile.html
@@ -114,7 +114,7 @@
 						</div>
 	
 		            <div class="form-group">
-		            	<button type="button" disabled="true" id="register-button" class="form-control btn btn-primary rounded submit px-3" onclick="cadastrar()">CADASTRAR</button>
+		            	<button type="button" disabled="true" id="register-button" class="form-control btn btn-primary rounded submit px-3" onclick="cadastrar_m()">CADASTRAR</button>
 					</div>
 
 					<div >
