--- a/home_hsqe.html
+++ b/home_hsqe.html
@@ -135,9 +135,9 @@
         </ul>
         <div class="user_option">
           
-          < class="-inline my-2 my-lg-0">
+          <class="-inline my-2 my-lg-0">
             
-          </>
+        </div>
         </div>
       </div>
     </div>
