--- a/mobile/home_hsqe_mobile.html
+++ b/mobile/home_hsqe_mobile.html
@@ -147,7 +147,7 @@
     
       <br>
       <div class="row">
-        <div class="col-md-1 col-sm-1"><a href="https://forms.office.com/e/pm6yVnvib1">
+        <div class="col-md-1 col-sm-1"><a href="https://forms.office.com/e/577AZ1Ddx5">
           <div class="content-box1 bg-s_green">
             <div class="img-box">
               <img src="../assets/images/green.png" alt="" /> 
@@ -159,7 +159,7 @@
             </div>
              </div>
         </div>
-        <div class="col-md-1 col-sm-1"><a href="https://forms.office.com/e/bDE7AeeaM9">
+        <div class="col-md-1 col-sm-1"><a href="https://forms.office.com/e/DLHsDTVk31">
           <div class="content-box1 bg-s_blue">
             <div class="img-box">
               <img src="../assets/images/safety.png" alt="" />
@@ -334,9 +334,9 @@ firebase.auth().onAuthStateChanged(function(user){
         <a href="#demo-modal_02"><img src="../assets/images/hsqe/06_Operations_de_levage.jpg" alt="Imagem" class="regras"/>Operação de Elevação</a><br>
           <a href="#demo-modal_03"><img src="../assets/images/hsqe/11_Travail_a_chaud.jpg" alt="Imagem" class="regras"/>Trabalho a Quente</a><br>
           <a href="#demo-modal_04"><img src="../assets/images/hsqe/10_Travaux_en_hauteur.jpg" alt="Imagem" class="regras"/>Trabalhos em Altura</a><br>
-          <a href="#demo-modal_05"><img src="../assets/images/hsqe/07_Systemes_alimentes_en_energie.jpg" alt="Imagem" class="regras"/>Sistemas Desernegizados</a><br>
+          <a href="#demo-modal_07"><img src="../assets/images/hsqe/07_Systemes_alimentes_en_energie.jpg" alt="Imagem" class="regras"/>Sistemas Desernegizados</a><br>
           <a href="#demo-modal_06"><img src="../assets/images/hsqe/09_Travaux_de_fouilles.jpg" alt="Imagem" class="regras"/>Escavação<br>
-            <a href="#demo-modal_07"><img src="../assets/images/hsqe/formLinha3.png" alt="Imagem" class="regras"/>Elétricos Desligados</a>
+            <a href="#demo-modal_05"><img src="../assets/images/hsqe/formLinha3.png" alt="Imagem" class="regras"/>Elétricos Desligados</a>
 
 </td>
 
@@ -561,7 +561,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center" >
-  <a href="https://forms.office.com/e/rk8a4X9KVa"><img src="../assets/images/hsqe/Espaço Confinado 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
+  <a href="https://forms.office.com/e/4kSPdcezAD"><img src="../assets/images/hsqe/Espaço Confinado 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
 </td>
 </tr>
 </table> 
@@ -578,7 +578,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center" >
-  <a href="https://forms.office.com/e/9U7fDpjbyh"><img src="../assets/images/hsqe/Op Elevação 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
+  <a href="https://forms.office.com/e/NdN5FVnDm1"><img src="../assets/images/hsqe/Op Elevação 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
 </td>
 </tr>
 </table> 
@@ -595,7 +595,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center" >
-  <a href="https://forms.office.com/e/PXGFF5Uf6V"><img src="../assets/images/hsqe/Trab a quente 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
+  <a href="https://forms.office.com/e/uND1LUi8cw"><img src="../assets/images/hsqe/Trab a quente 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
 </td>
 </tr>
 </table> 
@@ -612,7 +612,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center" >
-  <a href="https://forms.office.com/e/MbN291gE71"><img src="../assets/images/hsqe/Trab Altura 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
+  <a href="https://forms.office.com/e/Vcci4K5J9n"><img src="../assets/images/hsqe/Trab Altura 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
 </td>
 </tr>
 </table> 
@@ -629,7 +629,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center" >
-  <a href="https://forms.office.com/e/5EFjr0p2Fu"><img src="../assets/images/hsqe/Loto 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
+  <a href="https://forms.office.com/e/BxevCuDRyz"><img src="../assets/images/hsqe/Loto 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
 
 </td>
 </tr>
@@ -647,7 +647,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center" >
-  <a href="https://forms.office.com/e/qxqcDxvyx2"><img src="../assets/images/hsqe/Trab Escavação 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
+  <a href="https://forms.office.com/e/48ViqiSh9u"><img src="../assets/images/hsqe/Trab Escavação 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
 </td>
 </tr>
 </table> 
@@ -664,7 +664,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center" >
-  <a href="https://forms.office.com/e/PbWCWpZBaY"><img src="../assets/images/hsqe/Sist gas liq sol 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
+  <a href="https://forms.office.com/e/dUC8B0YTMz"><img src="../assets/images/hsqe/Sist gas liq sol 2023_page-0001.jpg" alt="Imagem" class="regras3"/></a>     
 </td>
 </tr>
 </table> 
